--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 h1{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: brown;
+    background-color: darkorange;
     font-size: 40px;
     font-weight: 700;
     text-align: center;
