--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,27 @@ header img {
   background-color: #854ff3;
   color: white;
 }
+
+.work{
+
+}
+
+.work ul{
+
+}
+
+.work ul li{
+
+}
+
+.work h1{
+
+font-size: 50px;
+
+font-weight: 700;
+}
+
+
+.work p{
+    
+}
